--- a/src/main/resources/templates/views/pet_view.html
+++ b/src/main/resources/templates/views/pet_view.html
@@ -4,26 +4,29 @@
 <body>
 <nav th:replace="partials :: navbar"/>
 
-<div class="uk-container">
-    <div class="uk-grid">
-      <div class="uk-width-1-2@m">
-          <h1 th:text="${pet.name}"/>
-        <h3 th:text="'Breed: '+${pet.breed}"/>
-        <h3 th:text="'Shelter: ' + ${shelter.name}"/>
-        <p th:text="'Age (in years): '+${pet.age}" />
-        <p th:text="'Color: '+${pet.color}" />
-        <p th:text="'Description: '+${pet.description}" />
-        <p th:text="'Sex: '+${pet.sex}" />
-        <p th:text="'Weight (in pounds): '+${pet.weight}" />
+    <div class="uk-flex">
+      <div class="uk-margin-auto uk-width-1-2@m uk-card uk-card-default uk-card-body">
+            <h1 class="uk-card-title" th:text="${pet.name}"/>
+            <div class="uk-width-1-2@m">
+                <img th:src="${pet.picture}" alt="Picture of Pet"/>
+            </div>
+            <h3 th:text="'Breed: '+${pet.breed}"/>
+            <h3 th:text="'Shelter: ' + ${shelter.name}"/>
+            <p th:text="'Age (in years): '+${pet.age}" />
+            <p th:text="'Color: '+${pet.color}" />
+            <p th:text="'Description: '+${pet.description}" />
+            <p th:text="'Sex: '+${pet.sex}" />
+            <p th:text="'Weight (in pounds): '+${pet.weight}" />
       </div>
-
-        <div class="uk-grid-divider"/>
-
-        <div class="uk-width-1-2@m">
-            <img th:src="${pet.picture}" alt="Picture of Pet"/>
-        </div>
     </div>
-</div>
+
+        <!--<div class="uk-grid-divider"/>-->
+
+        <!--<div class="uk-width-1-2@m">-->
+            <!--<img th:src="${pet.picture}" alt="Picture of Pet"/>-->
+        <!--</div>-->
+    <!--</div>-->
+
 <footer th:replace="partials::footer" />
 <div th:replace="partials::scripts" />
 </body>
