started on unifying all navbars

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -45,6 +45,9 @@
         <li>
             <a class="nav-link" href="/adopter/pets">View Pets</a>
         </li>
+        <li>
+            <a class="uk-navbar-item uk-logo" href="/home">Pet-tential</a>
+        </li>
         <!--Logged in users see....-->
         <li sec:authorize="isAuthenticated()">
             <a class="nav-link" href="/logout">Logout</a>
