--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -37,32 +37,32 @@
 <body>
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar uk-margin-bottom">
 <nav th:fragment="navbar"  style="background-color: #CCCCFF" class="uk-navbar-container uk-margin" uk-navbar="mode: click">
-    <div class="uk-navbar-left">
-    <ul class="uk-navbar-nav">
-        <li>
-            <a class="nav-link" href="/home">Home</a>
-        </li>
-        <li>
-            <a class="nav-link" href="/adopter/pets">View Pets</a>
-        </li>
-        <li>
-            <a class="uk-navbar-item uk-logo" href="/home">Pet-tential</a>
-        </li>
-        <!--Logged in users see....-->
-        <li sec:authorize="isAuthenticated()">
-            <a class="nav-link" href="/logout">Logout</a>
-        </li>
-        <li sec:authorize="isAuthenticated()">
-            <a class="nav-link" th:href="'/adopter/preferences/edit/'+${userId}">Settings</a>
-        </li>
-        <!--Logged out users see....-->
-        <li sec:authorize="!isAuthenticated()">
-            <a class="nav-link" href="/login">Login</a>
-        </li>
-        <li sec:authorize="!isAuthenticated()">
-            <a class="nav-link" href="/sign-up">Register</a>
-        </li>
-    </ul>
+    <div class="uk-navbar-center">
+        <div><div>
+            <ul class="uk-navbar-nav">
+                <li><a class="nav-link" href="/home">Home</a></li>
+                <li><a href="/adopter/pets">View all pets</a></li>
+            </ul>
+        </div></div>
+        <a class="uk-navbar-item uk-logo" href="/home">Pet-tential</a>
+        <div class="uk-navbar-right"><div>
+            <ul class="uk-navbar-nav">
+                <!--Logged in users see....-->
+                <li sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="'/adopter/preferences/edit/'+${userId}">Settings</a>
+                </li>
+                <!--Logged out users see....-->
+                <li sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/sign-up">Register</a>
+                </li>
+            </ul>
+        </div></div>
     </div>
 </nav>
 </div>
