--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -26,7 +26,7 @@
             color: #a02489;
         }
         .footer {
-            position:relative;
+            position:absolute;
             bottom:0;
             width:100%;
             height:10px;   /* Height of the footer */
