--- a/src/main/resources/templates/create/create_pet.html
+++ b/src/main/resources/templates/create/create_pet.html
@@ -36,12 +36,12 @@
 
         <div>
             <label for="age">Age</label>
-            <input id="age" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{age}" />
+            <input id="age" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="number" th:field="*{age}" />
         </div>
 
         <div>
             <label for="weight">Weight</label>
-            <input id="weight" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{weight}" />
+            <input id="weight" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="number" th:field="*{weight}" />
         </div>
 
         <div>
