added the background image

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -15,9 +15,10 @@
             height: 300px;
         }
         html, body {
-            height: 100%;
             margin: 0;
             padding: 0;
+            background-image: url("../static/images/bg_1.png");
+            background-size: cover;
         }
         li a{
             color:#f4429b;
