added a shadow to the navbar

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -14,6 +14,9 @@
             width: 600px;
             height: 300px;
         }
+        nav{
+            box-shadow: 5px 5px rgba(0, 102, 204, .2);
+        }
         html, body {
             margin: 0;
             padding: 0;
