added more styling

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8"/>
     <title th:text="${title}"></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css" />
+    <link rel="icon" href="../static/images/paw_2.png"/>
     <style>
         #map {
             width: 600px;
