added delete button

--- a/src/main/resources/templates/views/all_pets.html
+++ b/src/main/resources/templates/views/all_pets.html
@@ -24,6 +24,11 @@
                         <div class="uk-card-media-top uk-width-auto">
                             <label for="description">Description</label>
                             <p id="description" th:text="${pet.description}"></p>
+                            <div th:if="${user.isShelter}">
+                                <form th:action="'/pet/delete/' + ${pet.id}" method="POST">
+                                <button type="submit" class="uk-margin-small-right" uk-icon="minus"></button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
