--- a/src/main/resources/templates/views/pet_view.html
+++ b/src/main/resources/templates/views/pet_view.html
@@ -17,6 +17,9 @@
             <p th:text="'Description: '+${pet.description}" />
             <p th:text="'Sex: '+${pet.sex}" />
             <p th:text="'Weight (in pounds): '+${pet.weight}" />
+          <form th:action="@{'/adopt/pet/' + ${pet.getId()}}" method="POST">
+              <button type="submit">Put in a application for this pet!</button>
+          </form>
       </div>
     </div>
 
