--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -17,6 +17,9 @@
             <div class="uk-child-width-expand uk-margin-auto">
                 <button class="uk-button uk-button-default"><a href="/create/pet">Add Pet</a></button>
             </div>
+            <div class="uk-child-width-expand uk-margin-auto">
+                <button class="uk-button uk-button-default"><a href="/getvolunteer">New Volunteer Oppurtunity</a></button>
+            </div>
         </div>
     </div>
 
@@ -28,20 +31,22 @@
            <p> Applications</p>
             <table class="uk-table uk-table-striped">
                <div th:each="app : ${apps}">
+                   <div th:if="${app.getApprovalStatus() != true}">
                    <tr>
                        <td th:text="${app.getPet().getName()}"></td>
                        <td th:text="${app.getUser().getName()}"></td>
                        <td>
-                           <form th:action="'/adopt/' + ${app.getPet().getId()} + '/accept'" method="post" >
+                           <form th:action="'/adopt/' + ${app.getId()} + '/accept/' + ${app.getUser().getId()}" method="post" >
                                <button type="submit">Accept</button>
                            </form>
                        </td>
                        <td>
-                           <form th:action="'/adopt/' + ${app.getPet().getId()} + '/reject'" method="post" >
+                           <form th:action="'/adopt/' + ${app.getId()} + '/reject/' + ${app.getUser().getId()}" method="post" >
                                <button type="submit">Reject</button>
                            </form>
                        </td>
                    </tr>
+                   </div>
                </div>
             </table>
         </div>
@@ -60,19 +65,12 @@
 
     <hr />
 
-    <div class="uk-child-width-expand uk-margin-auto">
-        <h2> Calender </h2>
-        <iframe src="https://calendar.google.com/calendar/b/2/embed?title=List%20of%20Events&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=kcdu3013jq0shm8mc1fo8r9034%40group.calendar.google.com&amp;color=%23333333&amp;ctz=America%2FChicago" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <div class="uk-child-width-expand uk-margin-auto uk-position-center">
+        <h2> Upcoming Volunteer Opportunities </h2>
+        <div th:each="vol : ${vols}">
+            <a th:href="'/showVolunteers/' + ${vol.id}"><span th:text="${vol.date}"></span></a>
+        </div>
     </div>
-
-
-
-
-
-
-<div th:each="vol : ${vols}">
-    <a th:href="'/showVolunteers/' + ${vol.id}"><span th:text="${vol.date}"></span></a>
-</div>
 
 
 
