--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -26,10 +26,11 @@
             color: #a02489;
         }
         .footer {
-            position:relative;
-            bottom:0;
-            width:100%;
-            height:10px;   /* Height of the footer */
+            position: sticky;
+            bottom: 100px;
+            left: 45px;
+            /*width:100%;*/
+            height:100px;   /* Height of the footer */
         }
     </style>
 </head>
