--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -57,7 +57,8 @@
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="'/adopter/preferences/edit/'+${userId}">Settings</a>
+                    <a class="nav-link" th:if="${hasPreference}" th:href="'/adopter/preferences/edit/'+${userId}">Settings</a>
+                    <a class="nav-link" th:if="${!hasPreference}" th:href="/adopter/preferences">Settings</a>
                 </li>
                 <!--Logged out users see....-->
                 <li sec:authorize="!isAuthenticated()">
