button on create_page.html works with message

--- a/src/main/resources/templates/create/create_pet.html
+++ b/src/main/resources/templates/create/create_pet.html
@@ -58,7 +58,7 @@
             <!--<input id="user" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{user}" />-->
         <!--</div>-->
 
-        <button class="uk-button uk-button-default uk-button-small"> Submit </button>
+        <button class="uk-button uk-button-default uk-button-small" onclick="UIkit.notification({message: 'Submit successful...', status: 'success'})">Submit</button>
 
     </form>
 </div>
