--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="'/adopter/preferences/edit/'+${userId}">Settings</a>
+                    <a class="nav-link" href="/editUser">Settings</a>
                 </li>
                 <!--Logged out users see....-->
                 <li sec:authorize="!isAuthenticated()">
