--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -26,7 +26,7 @@
 <hr/>
 
 <!--Info-->
-<div class="uk-child-width-1-2@l uk-grid uk-child-width-1-2@s">
+<div class="uk-child-width-1-2@l uk-grid uk-grid-divider uk-child-width-1-2@s">
     <div class="uk-text-center">
         <h4 class="uk-margin-auto"><u>Applications</u></h4>
         <table class="uk-table uk-table-striped">
