in the middle of editing programs

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -59,6 +59,8 @@
                 </li>
                 <li sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/editUser">Settings</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:if="${hasPreference}" th:href="'/adopter/preferences/edit/'+${userId}">Preferences</a>
                     <a class="nav-link" th:if="${doesNotHavePreference}" href="/adopter/preferences">Preferences</a>
                 </li>
