buttons updated, just missing adopter_home page

--- a/src/main/resources/templates/create/createProgram.html
+++ b/src/main/resources/templates/create/createProgram.html
@@ -40,7 +40,7 @@
     </div>
 
     <input type="hidden" th:value="${shelters.id}" name="shelter" />
-    <button class="uk-button uk-button-primary uk-margin-auto" type="submit"> Submit </button>
+    <button class="uk-button uk-button-default uk-button-small" onclick="UIkit.notification({message: 'Program Created...', status: 'success'})"> Create </button>
 </form>
 </div>
 
