--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -35,7 +35,7 @@
                     <td th:text="${program.description}"></td>
                     <td th:text="${program.length}"></td>
                     <td>
-                        <button type="submit"><a th:href="'adopter/program/' + ${program.id}">Register</a></button>
+                        <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center'})">Submit</button>
                     </td>
                 </tr>
             </div>
@@ -63,7 +63,7 @@
                             <span th:text="${volunteer.time}"></span>
                         </td>
                         <td>
-                            <button type="submit">Sign me up!</button>
+                            <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Sign-Up Successful...', pos: 'top-center'})">Sign-Up</button>
                         </td>
                     </tr>
                 </form>
