--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -34,8 +34,8 @@
                     <td th:text="${program.name}"></td>
                     <td th:text="${program.description}"></td>
                     <td th:text="${program.length}"></td>
-                    <td> 
-                       <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center'})">Submit</button>
+                    <td>
+                        <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})">Submit</button>
                     </td>
                 </tr>
             </div>
@@ -64,7 +64,7 @@
                         </td>
                         <td>
 
-                            <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Sign-Up Successful...', pos: 'top-center'})">Sign-Up</button>
+                            <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Thanks for Volunteering', pos: 'top-center', status: 'success'})">Sign-Up</button>
 
                         </td>
                     </tr>
